--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -13,8 +13,12 @@ jedi==0.19.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+numpy==2.1.1
 packaging==24.1
+pandas==2.2.3
 parso==0.8.4
 pillow==10.4.0
 platformdirs==4.3.6
@@ -25,9 +29,7 @@ Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pywin32==306 
 nbconvert==7.8.0
-pandas==2.2.3
 seaborn==0.11.2
-matplotlib==3.7.1
-numpy>=1.21.0
 scikit-learn==1.2.2
