--- a/requirements.txt
+++ b/requirements.txt
@@ -124,6 +124,7 @@ traitlets==5.14.3
 typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
+ucimlrepo==0.0.7
 urllib3==2.2.3
 vine==5.1.0
 voluptuous==0.15.2
