--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,2 @@
 [core]
-    remote = storage
-['remote "storage"']
-    url = gdrive://1FOeR-P5GkTXsWHmVcAgFrwl2VkmY4hYp
-    gdrive_client_id = 858069355750-sjsoner3j05v071f3g974eoql4gfm621.apps.googleusercontent.com
-    gdrive_client_secret = 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
+    autostage = true
