Se modifico requirements.txt para que incluya dvc[gdrive] y que pywin32==306 solo se incluya en windows32

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ distro==1.9.0
 dpath==2.2.0
 dulwich==0.22.1
 dvc==3.55.2
+dvc[gdrive]  # Added support for Google Drive
 dvc-data==3.16.6
 dvc-http==2.32.0
 dvc-objects==5.1.0
@@ -97,7 +98,8 @@ pyparsing==3.1.4
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306
+# Install pywin32 only on Windows systems
+pywin32==306; sys_platform == 'win32'
 PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
