Add DVC remote configuration

--- a/.dvc/config
+++ b/.dvc/config
@@ -2,4 +2,4 @@
     autostage = true
 
 [remote "gdrive"]
-    url = gdßrive://1FOeR-P5GkTXsWHmVcAgFrwl2VkmY4hYp
+    url = gdrive://1FOeR-P5GkTXsWHmVcAgFrwl2VkmY4hYp
