--- a/requirements.txt
+++ b/requirements.txt
@@ -133,7 +133,7 @@ pyparsing==3.1.4
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306
+pywin32==306; platform_system == "Windows"
 PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
