--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,31 @@ repos:
     rev: 7.1.1
     hooks:
       - id: flake8
+        args: ["--config", "src/maternalhealth/pyproject.toml"]
+
   - repo: https://github.com/psf/black
     rev: 24.8.0
     hooks:
       - id: black
+        args: ["--config", "src/maternalhealth/pyproject.toml"]
+
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
       - id: isort
+        args: ["--settings-path", "src/maternalhealth/pyproject.toml"]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.981
+    hooks:
+      - id: mypy
+        verbose: true
+        args:
+          [
+            "--config-file=src/maternalhealth/pyproject.toml",
+            --show-error-codes,
+            --no-strict-optional,
+            --ignore-missing-imports,
+            --python-version=3.10,
+          ]
+        additional_dependencies: ["types-PyYAML"]
