--- a/src/maternalhealth/pyproject.toml
+++ b/src/maternalhealth/pyproject.toml
@@ -4,9 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 addopts = "--cov=maternalhealth"
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
 
 [tool.mypy]
 mypy_path = "src"
