--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ alembic==1.13.3
 amqp==5.2.0
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
+anyio==4.6.2.post1
 appdirs==1.4.4
 appnope==0.1.4
 asttokens==2.4.1
@@ -54,6 +55,7 @@ dvc-task==0.40.1
 entrypoints==0.4
 exceptiongroup==1.2.2
 executing==2.1.0
+fastapi==0.115.5
 filelock==3.16.1
 Flask==3.0.3
 flatten-dict==0.4.2
@@ -76,6 +78,7 @@ graphql-relay==3.2.0
 greenlet==3.1.1
 gto==1.7.1
 gunicorn==23.0.0
+h11==0.14.0
 httplib2==0.22.0
 hydra-core==1.3.2
 identify==2.6.1
@@ -143,9 +146,10 @@ pygtrie==2.5.0
 pyOpenSSL==24.2.1
 pyparsing==3.1.4
 pytest==8.3.3
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306; platform_system == "Windows" 
+pywin32==306; platform_system == "Windows"
 PyYAML==6.0.2
 pyzmq==26.2.0
 requests==2.32.3
@@ -164,10 +168,12 @@ shortuuid==1.0.13
 shtab==1.7.1
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlparse==0.5.1
 sqltrie==0.11.1
 stack-data==0.6.3
+starlette==0.41.2
 tabulate==0.9.0
 threadpoolctl==3.5.0
 tomli==2.0.2
@@ -181,6 +187,7 @@ tzdata==2024.2
 ucimlrepo==0.0.7
 uritemplate==4.1.1
 urllib3==2.2.3
+uvicorn==0.32.0
 vine==5.1.0
 virtualenv==20.27.1
 voluptuous==0.15.2
@@ -192,4 +199,3 @@ xgboost==2.1.1
 yarl==1.13.1
 zc.lockfile==3.0.post1
 zipp==3.20.2
-pytest-mock==3.14.0
